KUBE/INGRESS-APPLICATION/nginx-flask-mysql/kube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app1-frontend
  namespace: app-1

spec:
  replicas: 2

  selector:
    matchLabels:
      app: app1-frontend

  template:
    metadata:
      labels:
        app: app1-frontend

    spec:
      containers:
        - name: app1-frontend
          image: docker.io/payalkharat/kubernetes-ingress:app-1-frontend-v1
          imagePullPolicy: Always

          ports:
            - containerPort: 80
