KUBE/INGRESS-APPLICATION/nginx-flask-mysql/kube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-backend
  namespace: app-1

spec:
  type: ClusterIP

  selector:
    app: app1-backend

  ports:
    - port: 8000
      targetPort: 8000
