KUBE/INGRESS-APPLICATION/nginx-flask-mysql/kube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-frontend
  namespace: app-1

spec:
  type: ClusterIP

  selector:
    app: app1-frontend

  ports:
    - port: 80
      targetPort: 80
