KUBE/INGRESS-APPLICATION/nginx-flask-mysql/kube/app-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: app-1
spec:
  ingressClassName: haproxy

  rules:
    - host: app1.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-frontend
                port:
                  number: 80
